@@ -4,8 +4,7 @@ Priority: extra
 Maintainer: Debian FreeSmartphone.Org Team <pkg-fso-maint@lists.alioth.debian.org>
 Uploaders: Heiko Stuebner <heiko@sntech.de>, Rico Rommel <rico@bierrommel.de>, Sebastian Reichel <sre@debian.org>
 DM-Upload-Allowed: yes
-Build-Depends: cdbs,
-               debhelper (>= 7),
+Build-Depends: debhelper (>= 8),
                dh-autoreconf,
                libdbus-1-dev,
                libdbus-glib-1-dev,
