@@ -1,9 +1,3 @@
 #!/usr/bin/make -f
-
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
-include /usr/share/cdbs/1/rules/patchsys-quilt.mk
-include /usr/share/cdbs/1/rules/autoreconf.mk
-
-DEB_DESTDIR = $(CURDIR)/debian/tmp/
-
+%:
+	dh $@
